--- a/m-step-ahead-predictions.Rmd
+++ b/m-step-ahead-predictions.Rmd
@@ -24,6 +24,7 @@ knitr::opts_chunk$set(
 )
 library(brms)
 library(loo)
+theme_set(theme_default())
 SEED <- 1234
 set.seed(SEED)
 ```
@@ -97,10 +98,10 @@ Plot predictions:
 
 ```{r, cache = FALSE}
 pred <- cbind(df, predict(fit))
-names(pred) <- make.names(names(pred))
+names(pred)[5:6] <- c("Q2.5", "Q97.5")
 ggplot(pred, aes(time, Estimate)) +
   geom_smooth(
-    aes(ymin = X2.5.ile, ymax = X97.5.ile),
+    aes(ymin = Q2.5, ymax = Q97.5),
     stat = "identity"
   ) +
   geom_point(aes(time, y), inherit.aes = FALSE)
@@ -196,6 +197,22 @@ plot(psis(logr[, !is_na]))
 (approx_elpd_1sap <- sum(approx_elpds_1sap, na.rm = TRUE))
 ```
 
+Plotting exact against approximate predictions:
+
+```{r, cache = FALSE}
+dat_elpd <- data.frame(
+  approx_elpd = approx_elpds_1sap,
+  exact_elpd = exact_elpds_1sap
+)
+ggplot(dat_elpd, aes(x = approx_elpd, y = exact_elpd)) +
+  geom_abline(color = "gray30") +
+  geom_point(size = 2) +
+  geom_point(data = dat_elpd[17, ], size = 3, color = "red3") +
+  xlab("Approximate elpds") +
+  ylab("Exact elpds") 
+```
+
+The `r which(abs(dat_elpd$approx_elpd - dat_elpd$exact_elpd) > 0.5)`th observation(s) show a distance between exact and approximate elpd of more than $0.5$. The `r which(abs(dat_elpd$approx_elpd - dat_elpd$exact_elpd) > 0.25)`th observation(s) show a distance between exact and approximate elpd of more than $0.25$.
 
 ## m-step-ahead predictions leaving out all future values
 
@@ -263,6 +280,19 @@ plot(psis(logr[, !is_na]))
 (approx_elpd_4sap <- sum(approx_elpds_4sap, na.rm = TRUE))
 ```
 
+Plotting exact against approximate predictions:
+
+```{r, cache = FALSE}
+dat_elpd <- data.frame(
+  approx_elpd = approx_elpds_4sap,
+  exact_elpd = exact_elpds_4sap
+)
+ggplot(dat_elpd, aes(x = approx_elpd, y = exact_elpd)) +
+  geom_abline(color = "gray30") +
+  geom_point(size = 2) +
+  xlab("Approximate elpds") +
+  ylab("Exact elpds")
+```
 
 ## 1-step-ahead predictions leaving out blocks of future values
 
@@ -302,7 +332,7 @@ for (i in N:(L + 1)) {
     i_refit <- i
     refits <- c(refits, i)
     fit_part <- update(
-      fit_part, newdata = df[1:i, ], 
+      fit_part, newdata = df[-((i + 1):to), ], 
       recompile = FALSE, chains = 1
     )
     loglik[, i] <- log_lik(fit_part)[, i]
@@ -324,6 +354,21 @@ plot(psis(logr[, !is_na]))
 (approx_elpd_1sap_block <- sum(approx_elpds_1sap_block, na.rm = TRUE))
 ```
 
+Plotting exact against approximate predictions:
+
+```{r, cache = FALSE}
+dat_elpd <- data.frame(
+  approx_elpd = approx_elpds_1sap_block,
+  exact_elpd = exact_elpds_1sap_block
+)
+ggplot(dat_elpd, aes(x = approx_elpd, y = exact_elpd)) +
+  geom_abline(color = "gray30") +
+  geom_point(size = 2) +
+  xlab("Approximate elpds") +
+  ylab("Exact elpds")
+```
+
+The `r which(abs(dat_elpd$approx_elpd - dat_elpd$exact_elpd) > 0.25)`th observation(s) show a distance between exact and approximate elpd of more than $0.25$.
 
 <br />
 
